--- a/dublin_bus/dbus/templates/dbus/index.html
+++ b/dublin_bus/dbus/templates/dbus/index.html
@@ -37,7 +37,7 @@
     <nav class="navbar" style=background-color:transparent;  >
      
         <div class="navbar-header" style="float: right; margin-right: 50px;">
-          <h1>SBSW Worldwide</h1>
+          <h1>SBSW</h1>
         </div>
         
          <img id = "info_icon" src = {% static 'images/info.png'%} style="margin-right: -40px;">
