final front end bits

--- a/dublin_bus/dbus/templates/dbus/index.html
+++ b/dublin_bus/dbus/templates/dbus/index.html
@@ -40,26 +40,29 @@
           <h1>SBSW</h1>
         </div>
         
-         <img id = "info_icon" src = {% static 'images/info.png'%} style="margin-right: -40px;">
-	<div class = "info_modal">
+         <img id = "info_icon" src = {% static 'images/info.jpeg'%} style="margin-right: -60px; margin-left: 20px;">
+	<div class = "info_modal" style="overflow-y: scroll;">
 		<div class="modal-content">
 		<span id = "close_modal">x</span>
 		<br>
 		<div>
-		<h2 id="info-title">Hello and welcome to Strategic Bus Solutions Worldwide</h2>
+		<h2 id="info-title">SBSW</h2>
+            <br>
 		<div id="site-description">
-		<span id = "title">Below you will find two main options:</span>
-                <br>
+                
 		<ul id="info-list">
-			<li>Journey Planner</li><br>
-			<div class="functions">For this option you maybe enter your desired start and stop destinations and click go.
-			Alternatively you may select "Use Current Location" to use your current location as your start point
-			or select start and end point by clicking on the map itself. Once you have finished and clicked go, 
-			scroll down to find a breakdown of you journey as well as the price of you journey</div>
+			<li><strong>Journey Planner</strong></li><br>
+			<div class="functions">Choose from your current location, or input your own desired start and end destination, and select go. Alternatively you can click on the map to choose your start and end location. Leave now is set as the default time, but unchecking this box allows you to select a future time and date. 
+            </div>
 			<br>
-			<li>Search By Route</li><br>
-			<div class="functions">Use this option if you know the exact bus number you want to use as well as the number or general address
-			of the start and end stop</div>
+			<li><strong>Search By Route</strong></li><br>
+			<div class="functions">Select the bus route you need to take, and your start and end stops. </div>
+             <br>
+            		<li><strong>Map</strong></li>
+           <br>
+			<div class="functions">Use the 'Show Leap Stores' button to display shops near you where you can top up your leap card. The 'Clear All' button clears all inputs and markers from the map so you choose a new journey.</div>
+               <br>
+               <br>
 		</ul>
 		</div>
 		</div>
