fixed bug with leap button and subsequent click

--- a/dublin_bus/dbus/templates/dbus/index.html
+++ b/dublin_bus/dbus/templates/dbus/index.html
@@ -432,6 +432,7 @@
 			removeMarkers()
 			directionsDisplay.setMap(null);
 			start_marker = true;
+                        click_count = 0;
 			output = []
           		output.push(pos)          
           		console.log(output)
